[gd_scene load_steps=2 format=3 uid="uid://bswe4x3y11u1i"]

[ext_resource type="Script" path="res://scenes/gameOverScreen.gd" id="1_xacoc"]

[node name="gameOverScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_xacoc")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.10923, 9.64119e-06, 0.109436, 1)

[node name="gameOverUI" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -215.0
offset_top = -97.0
offset_right = 215.0
offset_bottom = 97.0
grow_horizontal = 2
grow_vertical = 2

[node name="gameOverContainer" type="MarginContainer" parent="gameOverUI"]
layout_mode = 2
theme_override_constants/margin_bottom = 45

[node name="verticalSpacer" type="VBoxContainer" parent="gameOverUI/gameOverContainer"]
layout_mode = 2

[node name="gameOverLabel" type="Label" parent="gameOverUI/gameOverContainer/verticalSpacer"]
layout_mode = 2
theme_override_font_sizes/font_size = 75
text = "GAME OVER"
horizontal_alignment = 1
vertical_alignment = 1

[node name="scoreLabel" type="Label" parent="gameOverUI/gameOverContainer/verticalSpacer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "YOUR SCORE: "
horizontal_alignment = 1
vertical_alignment = 1

[node name="startAgainContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -169.0
offset_top = -117.0
offset_right = 169.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/margin_bottom = 75

[node name="startAgainLabel" type="Label" parent="startAgainContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "SPACE TO START AGAIN"
horizontal_alignment = 1
